MYSQLEXCEL-289 - MYSQL FOR EXCEL V1.3.6 - REFRESH ALL
- Created the GetExcelTable and GetExcelTableByConnectionName methods to fetch a ListObject that corresponds to a WorkbookConnection. Created the GetDataModelConnection method to move functionality from the ImportMultipleDialog to an extension method. Removed the RefreshAllListObjects and RefreshAllPivotTables since the way the Refresh All functionality is overridden no longer will call those methods. Removed a couple of more unused methods. (source\Classes\ExcelUtilities.cs, source\Forms\ImportMultipleDialog.cs)
- Removed resource strings that were present in methods removed in this commit. (source\Properties\Resources.Designer.cs, source\Properties\Resources.resx)
- Modified the RefreshAllCustomFunctionality method to to loop through all Workbook connections, any connection created by MySQL for Excel to refresh imported data is handled internally by the add-in, the rest of the connections are refreshed in the standard way. This instead of looping through Worksheets and their ListObjects and PivotTables to refresh data. (source\ThisAddIn.cs)
- Created the OLEDB_MYSQL_CONNECTION_STRING_STATIC and OLEDB_MYSQL_CONNECTION_STRING_FULL constants to contain the connection string used for a dummy MySQL connection. (source\Classes\MySQLDataUtilities.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.3.7
+- Changed the way the Refresh All is overridden by MySQL for Excel, in previous versions the Refresh All was looping through all Excel tables (ListObjects)
+  and PivotTables found in every Excel Worksheet and refreshed their contents. Now the Refresh All is overridden to loop through all Workbook connections,
+  any connection created by MySQL for Excel to refresh imported data is handled internally by the add-in, the rest of the connections are refreshed in the
+  standard way. (MySQL Bug #81901, Bug #23605635 - MYSQL FOR EXCEL V1.3.6 - REFRESH ALL)
 - Fixed the case where Excel cells contain an empty string instead of a blank, maybe coming from pasted data, so that when the data is processed to be
   inserted into a MySQL table (trhough an Export, Append or Edit Data operation) the emtpy string is considered the same as a blank cell.
   (MySQL Bug #82497, Bug #24431935 - MYSQL EXCEL CONNECTOR ERRS WITH NULL FIELDS)
