MYSQLEXCEL-300 - MYSQL FOR EXCEL AND COMMA SEPARATOR IN CURRENCY
- Reverted back code in the ExportData method to the way it was in 1.3.3, where a fix for locale numbers was introduced. The locale-free fix for numbers was removed in 1.3.5 where that fix was found to introduce other problems. Now it has been added back and the other problems sorted out. (source\Forms\ExportDataForm.cs)
- Added back a constructor overload for MySqlDataTable used by Export Data operations to create the table with the final column data types so that locale numbers are converted to invariant ones by detecting correctly boxed numeric values. Fixed code in the CreateTableSchema to take in consideration user default values. (source\Classes\MySQLDataTable.cs)
- Fixed code in the FillSchemaInfoRow that sets the MySQL data type of the column. Added a new defaultValue parameter to one of the constructor overloads for MySqlDataColumn, this in order to set the UserDefaultValue property from the consumers of the constructor. (source\Classes\MySQLDataColumn.cs)
- Fixed code in the GetStringRepresentationForNumericObject to take into account the ci parameter instead of hardcoding a culture-invariant CultureInfo. (source\Classes\MySqlDataType.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.3.7
+- Reverted back the way Export Data operations prepare data to be exported so the DataTable container has the final data types before the operation takes
+  place, this automatically makes the decimal numbers conversion from any locale to an invariant one. The locale-free fix for numbers was removed in 1.3.5
+  where that fix was found to introduce other problems. Now it has been added back and the other problems sorted out.
+  (MySQL Bug #84049, Bug #25214984 - MYSQL FOR EXCEL AND COMMA SEPARATOR IN CURRENCY)
 - Changed the way the Refresh All is overridden by MySQL for Excel, in previous versions the Refresh All was looping through all Excel tables (ListObjects)
   and PivotTables found in every Excel Worksheet and refreshed their contents. Now the Refresh All is overridden to loop through all Workbook connections,
   any connection created by MySQL for Excel to refresh imported data is handled internally by the add-in, the rest of the connections are refreshed in the
