MYSQLEXCEL-302 - ERROR REFRESHING IMPORTED DATA FROM DIFFERENT SCHEMAS IN SAME CONNECTION
- Changed code in the TestConnection method to always test the connection using the MySqlWorkbenchConnection.TestConnectionAndRetryOnWrongPassword instead of the TestConnectionSilently method. That way we ensure that if the password is not present in the connection, a dialog is presented to the users to input it. Also TestConnection now checks first if the connection status is already accepting connection, that way there is  no need to test the connection again. Changed code in the Restore to call TestConnection before attempting to restore the MySqlTable instance. Moved the setting of the connection's schema from the ConnectionId setter to the Restore method if the connection is established successfully. (source\Classes\ImportConnectionInfo.cs)
- Changed in the CreateTableSchema method the call to MySqlWorkbenchConnection.GetColumnsInformationTable to pass the SchemaName instead of null, since the current connection in the sidebar may be positioned in a different Schema so the WbConnection.Schema is different to the MySqlDataTable.SchemaName, and the latter is the one that is accurate for the instance. (source\Classes\MySQLDataTable.cs)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
 1.3.7
+- Fixed the way the current schema is assigned to the connection being used to refresh imported data. Connections for imported data are first checked
+  to see if they are already connected, otherwise a connection is attempted; if successful the current schema is assigned to the connection. That way
+  we ensure a shared connection for different imported tables switches to the current schema correctly.
+  (MySQL Bug #84154, Bug #25233309 - ERROR REFRESHING IMPORTED DATA FROM DIFFERENT SCHEMAS IN SAME CONNECTION)
 - Added code to check the status of MySQL connections before attempting to refresh imported MySQL data using those connections, if connections are not
   active an attempt to connect is done. If the connections do not have a password specified the connection is attempted without password, if that fails
   then a dialog is displayed asking for the password before attempting to open the connection again. Added 2 new options to the Global Options dialog to
