MYSQLEXCEL-303 - COMMIT CHANGES ERROR
- Fixed code in the OpenConnectionForSavedEditConnectionInfo to call the MySqlWorkbenchConnection.SetAdditionalConnectionProperties method for connections restored and used in Edit Data sessions. (source\ThisAddIn.cs)
- Added code to handle differently the error message displayed to users when the Apply button is clicked in the case where the ErroredOutDataRow is a MySqlDummyErroredRow instance, in which case the error message should include the MySqlStatement.SqlQuery + MySqlStatement.ResultText. Removed the setting of the MySqlWorkbenchConnection.AllowUserVariables from the ApplyScript method because that property is now already being set when the connection is initially opened.  Added code to the ApplyScript method to set the client character set (do a SET NAMES) to the same character set the target table is using, and if that target character set is Unicode and different to UTF-8, fallback to UTF-8 in case of Export and Append Data operations. (source\Forms\MySqlScriptDialog.cs)
- Modified code in the methods that push data on Append, Edit and Export Data operations to handle the error message displayed to users when the MySqlScriptDialog.ErroredOutDataRow is a MySqlDummyErroredRow. (source\Forms\AppendDataForm.cs, source\Forms\EditDataDialog.cs, source\Forms\ExportDataForm.cs)
- Changed the _mySqlRow private field to be a MySqlRow public property so it is accessible by consumer classes.  Added a new MySqlStatement constructor to create a dummy instance that just holds an error message not related to any IMySqlDataRow instance or executed SQL statements, but to opening their related connection or transaction. (source\Classes\MySqlStatement.cs)
- Created the MySqlDummyErroredRow class to hold errors related to opening a connection or transaction and not to any executed SQL statement. (source\Classes\MySqlDummyErroredRow.cs, source\MySQL.ForExcel.csproj)
- Modified the accessor for the Statement property to be protected, so it

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1116,4 +1116,11 @@ In order to avoid receiving this error message each time the Excel table is refr
   <data name="StandardWorkbookConnectionRefreshError" xml:space="preserve">
     <value>An error ocurred trying to refresh data in Workbook connection "{0}".</value>
   </data>
+  <data name="ConnectionOrTransactionInitializationError" xml:space="preserve">
+    <value>Error initializing connection or transaction.</value>
+  </data>
+  <data name="UnsupportedClientCharSetError" xml:space="preserve">
+    <value>A Unicode client character set different to UTF-8 is not supported by the MySQL Server.
+Connection will fall back to use a client character set of UTF-8.</value>
+  </data>
 </root>
