--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 1.3.7
+- Fixed a problem with the assembled where clause for queries generated in Edit Data sessions when having the option to use optimistic concurrency; when
+  empty strings were present in the editing MySQL table, the values where being incorrectly converted to null in the where clause. Ensured the connection
+  used to push Edit Data changes uses the same client character set the editing table has. Added a friendly error message in case the editing table has
+  a  Unicode character set that is not UTF-8 compatible since those are NOT supported client character sets in MySQL, so editing such a table is
+  currently not possible. (MySQL Bug #76287, Bug #25236221 - COMMIT CHANGES ERROR)
 - Fixed a problem where connections migrated from the MySQL for Excel connections file to the MySQL Workbench connections file were being saved with a
   connection method of "Local Socket/Pipe" instead of "Stantard TCP/IP". Fixed a problem where the MySQL for Excel connections file was being re-created
   after connections were migrated successfully to the MySQL Workbench connections file, when it should remain deleted. Fixed a problem where the dialog
