--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1123,4 +1123,13 @@ In order to avoid receiving this error message each time the Excel table is refr
     <value>A Unicode client character set different to UTF-8 is not supported by the MySQL Server.
 Connection will fall back to use a client character set of UTF-8.</value>
   </data>
+  <data name="top" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\top.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImportDataRowsLimitCappedDueStartRowWarning" xml:space="preserve">
+    <value>Rows maximum limit capped to total rows minus start row.</value>
+  </data>
+  <data name="ImportDataRowsLimitCappedDueWorksheetSpaceWarning" xml:space="preserve">
+    <value>Rows maximum limit capped to avoid exceeding available Worksheet's space.</value>
+  </data>
 </root>
