--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 1.3.7
+- Fixed the query sent to the server when creating a new schema with a BINARY character set so that it never includes a "COLLATE binary" after specifying
+  the charcter set, since the binary collation is the only one allowed for a binary character set, the MySQL server deems the "COLLATE binary" as an
+  invalid syntax. (Bug #22371690 - BINARY - BINARY COLLATION RISES AN SQL ERROR)
 - Fixed the sizes of grids and some other fields that are set to grow to the bottom and to the right when the form is resized, and changed the way
   anchors are defined for them. (MySQL Bug #84351, Bug #25325457 - GRIDS SIZES WRONG AT THE BOTTOM)
 - Fixed the way a summary row is created when using Excel tables (ListObjects) to import MySQL data. The summary row must be created after the ListObject
