MYSQLEXCEL-252 - [IMPORT] ERROR IMPORTING GEOMETRY TYPE DATA
- Updated to the latest MySQL.Utility.dll that adds support for spatial data. Added a new library needed by the MySQL.Utility to handle regular expressions needed to parse spatial data from text representations. (source\libraries\MySQL.Utility.dll, source\libraries\MySql.Utility.RegularExpressions.dll, source\MySQL.ForExcel.csproj)
- Updated WiX code to include the new spatial regular expressions library in the product installations. (Installer\main.wxs)
- Added a new option to the Global Options dialog to select the format used to encode and decode spatial data as text. Rearranged all controls in the Global Options dialog to group them by tabs, since the form was already too big and full of options, now it is easier to navigate. (source\Forms\GlobalOptionsDialog.Designer.cs, source\Forms\GlobalOptionsDialog.cs, source\Forms\GlobalOptionsDialog.resx)
- Added a new user property for the text format selected to encode and decode spatial data. (source\Properties\Settings.Designer.cs, source\Properties\Settings.settings, source\app.config)
- Added support to handle spatial data on all data operations (Import, Export, Append, Edit) supported in MySQL for Excel. (source\ThisAddIn.cs, source\Classes\MySQLDataColumn.cs, source\Classes\MySQLDataTable.cs, source\Classes\MySqlDataType.cs,
source\Classes\MySqlDisplayDataType.cs)
- Added support to handle spatial data with stored procedures (on this commit this support is not complete and another commit to complete the support will be done). (source\Classes\CustomPropertyDescriptor.cs, source\Forms\ImportProcedureForm.cs)
- Added visual cues to the dialogs where MySQL data can be previewed so that BLOB and NULL values are spotted line in MySQL Workbench. (source\Controls\PreviewDataGridView.cs, source\Forms\PreviewTableViewDialog.Designer.cs, source\Forms\PreviewTableViewDialog.cs, source\Forms\ImportTableViewForm.Designer.cs, source\Forms\ImportTableViewForm.cs, sourc

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 1.3.7
+- Added support to handle spatial data in MySQL for Excel. Spatial data is handled using corresponding text representations such as Well-Known Text
+  (WKT), Keyhole Markup Language (KML), Geography Markup Language (GML) and GeoJSON. The last 3 formats are converted into WKT internally since that is
+  the format natively supported by MySQL. A new option was added to the Global Options dialog to select the text format to use to handle spatial data
+  (WKT by default). Options in the Global Options dialog were rearranged to be grouped in tab pages for easier navigation.
+  (Bug #22081263 - [IMPORT] ERROR IMPORTING GEOMETRY TYPE DATA)
 - Fixed the query sent to the server when creating a new schema with a BINARY character set so that it never includes a "COLLATE binary" after specifying
   the charcter set, since the binary collation is the only one allowed for a binary character set, the MySQL server deems the "COLLATE binary" as an
   invalid syntax. (Bug #22371690 - BINARY - BINARY COLLATION RISES AN SQL ERROR)
