--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -1132,4 +1132,10 @@ Connection will fall back to use a client character set of UTF-8.</value>
   <data name="ImportDataRowsLimitCappedDueWorksheetSpaceWarning" xml:space="preserve">
     <value>Rows maximum limit capped to avoid exceeding available Worksheet's space.</value>
   </data>
+  <data name="blob" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\blob.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_null" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\null.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
